--- a/index.html
+++ b/index.html
@@ -165,98 +165,70 @@ td, th{ vertical-align:middle; }
 <script>
 const PRODUCTS = [
   {
-    "name": "빙땅 크리스탈 (320ML)",
+    "name": "맥주",
     "krw": 2000.0,
     "usd": 1.5,
     "idr": 25000.0,
     "stock": "150(144)"
   },
   {
-    "name": "WOCA 소금 초콜릿 (90g)",
-    "krw": 4000.0,
-    "usd": 3.0,
-    "idr": 45000.0,
+    "name": "WOCA 초콜릿",
+    "krw": 2500.0,
+    "usd": 2.0,
+    "idr": 30000.0,
     "stock": "28"
   },
   {
-    "name": "코카콜라 제로(330ml)",
+    "name": "YABA 캐슈넛",
+    "krw": 1500.0,
+    "usd": 1.0,
+    "idr": 20000.0,
+    "stock": "28"
+  },
+  {
+    "name": "YABA 그래놀라",
+    "krw": 2500.0,
+    "usd": 1.5,
+    "idr": 30000.0,
+    "stock": "28"
+  },
+  {
+    "name": "메루발리 코코넛칩",
+    "krw": 1500.0,
+    "usd": 1,
+    "idr": 20000.0,
+    "stock": "24"
+  },
+  {
+    "name": "큐텔라싱콘 감자칩",
     "krw": 500.0,
     "usd": 0.5,
-    "idr": 6000.0,
+    "idr": 5000.0,
     "stock": "24"
   },
   {
-    "name": "코카콜라 제로 (220ml)",
-    "krw": 450.0,
-    "usd": 0.5,
-    "idr": 5500.0,
-    "stock": "24"
-  },
-  {
-    "name": "코카콜라 (330ml)",
-    "krw": 450.0,
-    "usd": 0.5,
-    "idr": 5500.0,
-    "stock": "24"
-  },
-  {
-    "name": "코카콜라 (220ml)",
-    "krw": 400.0,
+    "name": "모든 음료",
+    "krw": 500.0,
     "usd": 0.5,
     "idr": 5000.0,
     "stock": "24"
   },
   {
-    "name": "스프라이트 (220ml)",
-    "krw": 400.0,
-    "usd": 0.5,
-    "idr": 5000.0,
-    "stock": "96"
-  },
-  {
-    "name": "생수 (600ml)",
-    "krw": 200.0,
-    "usd": 0.3,
-    "idr": 2000.0,
-    "stock": "72"
-  },
-  {
-    "name": "신라면 작은컵",
+    "name": "모든 작은 라면",
     "krw": 1500.0,
     "usd": 1.0,
     "idr": 15000.0,
     "stock": "18"
   },
   {
-    "name": "불닭볶음면 큰컵",
+    "name": "모든 큰라면",
     "krw": 2000.0,
     "usd": 1.5,
     "idr": 25000.0,
     "stock": "33"
   },
   {
-    "name": "엘립스 헤어오일 캡술형 - 노랑(50캡슐)",
-    "krw": 9000.0,
-    "usd": 6.0,
-    "idr": 10000.0,
-    "stock": "14"
-  },
-  {
-    "name": "엘립스 헤어오일 캡술형 - 핑크(50캡슐)",
-    "krw": 9000.0,
-    "usd": 6.0,
-    "idr": 10000.0,
-    "stock": "14"
-  },
-  {
-    "name": "엘립스 헤어오일 캡술형 - 보라(50캡슐)",
-    "krw": 9000.0,
-    "usd": 6.0,
-    "idr": 10000.0,
-    "stock": "14"
-  },
-  {
-    "name": "엘립스 헤어오일 캡술형 - 주황(50캡슐)",
+    "name": "엘립스 헤어오일",
     "krw": 9000.0,
     "usd": 6.0,
     "idr": 10000.0,
@@ -264,14 +236,14 @@ const PRODUCTS = [
   },
   {
     "name": "텀블러 단일 구매시 검정 OR 흰색",
-    "krw": 17000.0,
+    "krw": 20000.0,
     "usd": 12.0,
     "idr": 200000.0,
     "stock": "nan"
   },
   {
     "name": "텀블러 SET 구매시 검정 + 흰색",
-    "krw": 30000.0,
+    "krw": 35000.0,
     "usd": 20.0,
     "idr": 350000.0,
     "stock": "nan"
@@ -280,7 +252,7 @@ const PRODUCTS = [
     "name": "에코백",
     "krw": 10000.0,
     "usd": 7.0,
-    "idr": 120000.0,
+    "idr": 100000.0,
     "stock": "nan"
   }
 ];
