--- a/index.html
+++ b/index.html
@@ -241,7 +241,14 @@ const PRODUCTS = [
     "name": "엘립스 헤어오일",
     "krw": 9000.0,
     "usd": 6.0,
-    "idr": 10000.0,
+    "idr": 100000.0,
+    "stock": "14"
+  },
+  {
+    "name": "모기기피제",
+    "krw": 1500.0,
+    "usd": 1.0,
+    "idr": 15000.0,
     "stock": "14"
   },
   {
