--- a/index.html
+++ b/index.html
@@ -210,6 +210,13 @@ const PRODUCTS = [
     "stock": "24"
   },
   {
+    "name": "코피코 커피 사탕",
+    "krw": 500.0,
+    "usd": 0.5,
+    "idr": 5000.0,
+    "stock": "24"
+  },
+  {
     "name": "큐텔라싱콘 감자칩",
     "krw": 500.0,
     "usd": 0.5,
