--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ td, th{ vertical-align:middle; }
 const PRODUCTS = [
 {
     "name": "엘립스 헤어오일",
-    "krw": 9000.0,
-    "usd": 6.0,
+    "krw": 10000.0,
+    "usd": 7.0,
     "idr": 100000.0,
     "stock": "14"
   },
@@ -210,18 +210,18 @@ const PRODUCTS = [
     "stock": "24"
   },
   {
-    "name": "코피코 커피 사탕",
-    "krw": 500.0,
-    "usd": 0.5,
-    "idr": 5000.0,
-    "stock": "24"
-  },
-  {
     "name": "큐텔라싱콘 감자칩",
     "krw": 500.0,
     "usd": 0.5,
     "idr": 5000.0,
     "stock": "24"
+  }, 
+  {
+    "name": "병맥주",
+    "krw": 2500.0,
+    "usd": 2,
+    "idr": 30000.0,
+    "stock": "150(144)"
   },
     {
     "name": "맥주",
