--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ const PRODUCTS = [
     "stock": "150(144)"
   },
     {
-    "name": "맥주",
+    "name": "캔맥주",
     "krw": 2000.0,
     "usd": 1.5,
     "idr": 25000.0,
