--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
       background:var(--bg);
       color:var(--txt);
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Pretendard,Malgun Gothic,sans-serif;
+      max-width:100%;
+      overflow-x:hidden;
     }
 
     /* ------------ 공통 레이아웃 ------------ */
+    /* 헤더 높이에 맞춰 여백 최대한 축소 (이전 104px → 88px) */
     .wrap{
       max-width:1100px;
       margin:0 auto;
-      padding:136px 12px 24px; /* 헤더 높이만큼 위쪽 여백 */
+      padding:88px 12px 24px;
     }
 
     table{
@@ -39,7 +42,6 @@
       vertical-align:middle;
     }
     td.right,th.right{text-align:right;}
-
     .muted{color:var(--muted);}
     .stock{font-size:12px;color:#b7c8d8;}
 
@@ -57,55 +59,55 @@
     header.incamart-top .inner{
       max-width:1100px;
       margin:0 auto;
-      padding:10px 12px 12px;
+      padding:4px 8px 6px;   /* 많이 줄임 */
     }
     header.incamart-top .top-row{
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:8px;
-      margin-bottom:8px;
+      gap:4px;
+      margin-bottom:3px;     /* 줄임 */
     }
     header.incamart-top h1{
       margin:0;
-      font-size:18px;
+      font-size:13px;        /* 줄임 */
       font-weight:700;
     }
     header.incamart-top .actions{
       flex-shrink:0;
     }
     header.incamart-top .btn-reset{
-      padding:7px 12px;
-      border-radius:10px;
+      padding:4px 8px;
+      border-radius:9px;
       border:1px solid rgba(255,255,255,0.18);
       background:#1a2432;
       color:#e8f0f7;
       font-weight:600;
-      font-size:13px;
+      font-size:11px;
     }
     header.incamart-top .btn-reset:active{
       transform:translateY(1px);
     }
 
-    /* 합계 상자 */
+    /* 합계 상자 – 한 줄 높이 최소화 */
     .totals{
       display:grid;
       grid-template-columns:repeat(3,1fr);
-      gap:8px;
+      gap:4px;
     }
     .totals .box{
       background:#111821;
       border:1px solid var(--border);
-      border-radius:12px;
-      padding:10px 12px;
+      border-radius:10px;
+      padding:4px 6px;      /* 줄임 */
     }
     .totals .label{
-      font-size:11px;
+      font-size:10px;
       color:var(--muted);
-      margin-bottom:4px;
+      margin-bottom:1px;
     }
     .totals .v{
-      font-size:18px;
+      font-size:14px;        /* 줄임 */
       font-weight:800;
     }
 
@@ -117,9 +119,10 @@
       overflow:hidden;
     }
 
-    /* 테이블 헤더(상품명/수량) 고정 */
+    /* 테이블 헤더(상품명/수량) 고정 + 리스트만 스크롤 */
+    /* 헤더가 낮아져서 테이블 영역을 더 키움 */
     .table-wrap{
-      max-height:calc(100vh - 220px); /* 헤더+여백 제외 높이 */
+      max-height:calc(100vh - 160px);
       overflow-y:auto;
       overflow-x:hidden;
     }
@@ -135,11 +138,11 @@
     input.qty{
       width:100%;
       min-width:0;
-      min-height:44px;
-      height:46px;
-      padding:10px 12px;
-      font-size:16px;
-      border-radius:12px;
+      min-height:38px;
+      height:40px;
+      padding:7px 9px;
+      font-size:15px;
+      border-radius:11px;
       border:1px solid var(--border);
       background:#0c121a;
       color:var(--txt);
@@ -159,33 +162,33 @@
       width:120px;
     }
 
-    /* 테이블 맨 아래 총합 */
     tfoot td{font-weight:800;}
 
     /* ------------ 모바일 최적화 (<=640px) ------------ */
     @media (max-width:640px){
       header.incamart-top .inner{
-        padding:8px 10px 10px;
+        padding:4px 8px 6px;
       }
       header.incamart-top h1{
-        font-size:16px;
-      }
-      .wrap{
-        padding:128px 10px 20px;
+        font-size:12px;
       }
 
-      /* 합계 상자 조금 더 촘촘하게 */
+      /* 모바일에서 여백 더 줄이기 (이전 96px → 76px) */
+      .wrap{
+        padding:76px 10px 18px;
+      }
+
       .totals{
-        gap:6px;
+        gap:3px;
       }
       .totals .box{
-        padding:8px 10px;
+        padding:4px 6px;
       }
       .totals .v{
-        font-size:16px;
+        font-size:13px;
       }
 
-      /* 상품테이블: 단가/합계 숨기고, 상품명+수량만 */
+      /* 모바일에선 단가/합계 숨기고 상품명+수량만 */
       thead th:nth-child(2),
       thead th:nth-child(3),
       thead th:nth-child(4),
@@ -204,26 +207,21 @@
       thead th:nth-child(1){width:auto;}
       thead th:nth-child(5){
         text-align:right;
-        width:110px;
+        width:105px;
       }
       tbody td:nth-child(5){
         text-align:right;
       }
 
       input.qty{
-        height:48px;
-        font-size:18px;
+        height:40px;
+        font-size:16px;
       }
 
+      /* 헤더가 낮아졌으니 리스트 영역 더 크게 */
       .table-wrap{
-        max-height:calc(100vh - 230px);
+        max-height:calc(100vh - 155px);
       }
-    }
-
-    /* 좌우 스크롤 방지 */
-    html,body{
-      max-width:100%;
-      overflow-x:hidden;
     }
   </style>
 </head>
@@ -369,13 +367,15 @@
     recalc();
 
     // 수량 포커스 시 0 지우고, 비워두면 다시 0
-    document.querySelectorAll('tbody input.qty').forEach(input => {
-      input.addEventListener('focus', () => {
-        if (input.value === '0') input.value = '';
-      });
-      input.addEventListener('blur', () => {
-        if (input.value.trim() === '') input.value = '0';
-      });
+    document.addEventListener('focusin', e => {
+      if (e.target.classList && e.target.classList.contains('qty')){
+        if (e.target.value === '0') e.target.value = '';
+      }
+    });
+    document.addEventListener('focusout', e => {
+      if (e.target.classList && e.target.classList.contains('qty')){
+        if (e.target.value.trim() === '') e.target.value = '0';
+      }
     });
 
     // 초기화 버튼
