--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     }
 
     /* ------------ 공통 레이아웃 ------------ */
-    /* 헤더 높이에 맞춰 여백 최대한 축소 (이전 104px → 88px) */
+    /* 상단 헤더 높이에 맞춰 적당히 여백 (이전 104px → 96px) */
     .wrap{
       max-width:1100px;
       margin:0 auto;
-      padding:88px 12px 24px;
+      padding:96px 12px 24px;
     }
 
     table{
@@ -42,6 +42,7 @@
       vertical-align:middle;
     }
     td.right,th.right{text-align:right;}
+
     .muted{color:var(--muted);}
     .stock{font-size:12px;color:#b7c8d8;}
 
@@ -59,59 +60,59 @@
     header.incamart-top .inner{
       max-width:1100px;
       margin:0 auto;
-      padding:4px 8px 6px;   /* 많이 줄임 */
+      padding:4px 8px 6px;   /* 살짝 줄인 패딩 */
     }
     header.incamart-top .top-row{
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:4px;
-      margin-bottom:3px;     /* 줄임 */
+      gap:6px;
+      margin-bottom:4px;     /* 기존 8px → 4px */
     }
     header.incamart-top h1{
       margin:0;
-      font-size:13px;        /* 줄임 */
+      font-size:14px;        /* 기존 15px → 14px */
       font-weight:700;
     }
     header.incamart-top .actions{
       flex-shrink:0;
     }
     header.incamart-top .btn-reset{
-      padding:4px 8px;
-      border-radius:9px;
+      padding:5px 9px;
+      border-radius:10px;
       border:1px solid rgba(255,255,255,0.18);
       background:#1a2432;
       color:#e8f0f7;
       font-weight:600;
-      font-size:11px;
+      font-size:12px;
     }
     header.incamart-top .btn-reset:active{
       transform:translateY(1px);
     }
 
-    /* 합계 상자 – 한 줄 높이 최소화 */
+    /* 합계 상자 */
     .totals{
       display:grid;
       grid-template-columns:repeat(3,1fr);
-      gap:4px;
+      gap:6px;
     }
     .totals .box{
       background:#111821;
       border:1px solid var(--border);
-      border-radius:10px;
-      padding:4px 6px;      /* 줄임 */
+      border-radius:12px;
+      padding:8px 10px;   /* 기존보다 약간만 작게 */
     }
     .totals .label{
-      font-size:10px;
+      font-size:11px;
       color:var(--muted);
-      margin-bottom:1px;
+      margin-bottom:2px;
     }
     .totals .v{
-      font-size:14px;        /* 줄임 */
+      font-size:15px;        /* 기존 16px → 15px */
       font-weight:800;
     }
 
-    /* ------------ 상품 테이블 카드 ------------ */
+    /* ------------ 상품 테이블 카드 (이전 버전 그대로) ------------ */
     .card{
       background:var(--card);
       border:1px solid var(--border);
@@ -119,10 +120,9 @@
       overflow:hidden;
     }
 
-    /* 테이블 헤더(상품명/수량) 고정 + 리스트만 스크롤 */
-    /* 헤더가 낮아져서 테이블 영역을 더 키움 */
+    /* 테이블 헤더(상품명/수량) 고정 – 리스트 부만 스크롤 */
     .table-wrap{
-      max-height:calc(100vh - 160px);
+      max-height:calc(100vh - 190px); /* 상단 줄인 이전 버전 값 그대로 */
       overflow-y:auto;
       overflow-x:hidden;
     }
@@ -134,15 +134,15 @@
       z-index:5;
     }
 
-    /* 수량 입력칸 */
+    /* 수량 입력칸 (이전 “상단 여백 최소화 버전” 그대로) */
     input.qty{
       width:100%;
       min-width:0;
-      min-height:38px;
-      height:40px;
-      padding:7px 9px;
-      font-size:15px;
-      border-radius:11px;
+      min-height:40px;
+      height:42px;
+      padding:8px 10px;
+      font-size:16px;
+      border-radius:12px;
       border:1px solid var(--border);
       background:#0c121a;
       color:var(--txt);
@@ -156,7 +156,6 @@
     }
     input[type=number]{-moz-appearance:textfield;}
 
-    /* 수량 컬럼 고정 폭 */
     thead th:nth-child(5),
     tbody td:nth-child(5){
       width:120px;
@@ -170,25 +169,23 @@
         padding:4px 8px 6px;
       }
       header.incamart-top h1{
-        font-size:12px;
+        font-size:13px;
       }
-
-      /* 모바일에서 여백 더 줄이기 (이전 96px → 76px) */
       .wrap{
-        padding:76px 10px 18px;
+        padding:88px 10px 20px;  /* 이전 96px → 88px */
       }
 
       .totals{
-        gap:3px;
+        gap:4px;
       }
       .totals .box{
-        padding:4px 6px;
+        padding:7px 9px;
       }
       .totals .v{
-        font-size:13px;
+        font-size:14px;
       }
 
-      /* 모바일에선 단가/합계 숨기고 상품명+수량만 */
+      /* 상품테이블: 단가/합계 숨기고, 상품명+수량만 */
       thead th:nth-child(2),
       thead th:nth-child(3),
       thead th:nth-child(4),
@@ -207,20 +204,19 @@
       thead th:nth-child(1){width:auto;}
       thead th:nth-child(5){
         text-align:right;
-        width:105px;
+        width:110px;
       }
       tbody td:nth-child(5){
         text-align:right;
       }
 
       input.qty{
-        height:40px;
-        font-size:16px;
+        height:44px;
+        font-size:17px;
       }
 
-      /* 헤더가 낮아졌으니 리스트 영역 더 크게 */
       .table-wrap{
-        max-height:calc(100vh - 155px);
+        max-height:calc(100vh - 185px); /* 이전 버전값 그대로 */
       }
     }
   </style>
