--- a/index.html
+++ b/index.html
@@ -131,20 +131,23 @@
       z-index:5;
     }
 
-    /* 수량 입력칸 */
+    /* ===== 수량 입력칸 (크기 고정) ===== */
     input.qty{
+      box-sizing:border-box;
       width:100%;
       min-width:0;
-      min-height:40px;
-      height:42px;
-      padding:8px 10px;
-      font-size:16px;
-      border-radius:12px;
+      height:46px;
+      min-height:46px;
+      padding:10px 12px;
+      font-size:18px;
+      line-height:1.2;
+      border-radius:14px;
       border:1px solid var(--border);
       background:#0c121a;
       color:var(--txt);
       -webkit-appearance:none;
       appearance:none;
+      transition:none;
     }
     input[type=number]::-webkit-outer-spin-button,
     input[type=number]::-webkit-inner-spin-button{
@@ -152,6 +155,17 @@
       margin:0;
     }
     input[type=number]{-moz-appearance:textfield;}
+
+    /* 포커스 / 입력 상태에서도 크기 그대로 유지 */
+    input.qty:focus{
+      outline:none;
+      border-color:#f5c14b;
+      box-shadow:0 0 0 2px rgba(245,193,75,0.6);
+      height:46px;
+      min-height:46px;
+      padding:10px 12px;
+      font-size:18px;
+    }
 
     thead th:nth-child(5),
     tbody td:nth-child(5){
@@ -207,10 +221,7 @@
         text-align:right;
       }
 
-      input.qty{
-        height:44px;
-        font-size:17px;
-      }
+      /* 모바일에서도 동일 크기 유지 (덮어쓰기 없음) */
     }
   </style>
 </head>
